--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 	<head>
 		<title>Gra o czołgach</title>
 		<meta charset="UTF-8">
-		<script src="./scripts/tank.js" defer></script>
+		<script src="./scripts/debug_script.js" defer></script>
+		<script src="./scripts/keyboardController.js" defer></script>
+		<script src="./scripts/controllable_tank.js" defer></script>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<p id="demoTitle">Tank steering demo v1.0</p>
+		<p id="demoTitle">Tank demo v1.1.alpha</p>
 		<div id="instructionsBox"> 
 			<div class="instructionContainer"> 
 				<p class="keyText">Left track forwards</p>
@@ -26,5 +28,7 @@
 				<img class="keyIcon" src="./assets/keys/keyD.png">
 			</div>
 		</div>
+		<img id="leftHandle" src="./assets/driving_handles/handle_left_normal.png">
+		<img id="rightHandle" src="./assets/driving_handles/handle_right_normal.png">
 	</body>
 </html>
