Refaktoryzacja kodu - Część 3

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<script src="./scripts/debug_script.js" defer></script>
 		<script src="./scripts/keyboardController.js" defer></script>
 		<script src="./scripts/controllable_tank.js" defer></script>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="./stylesheets/styles.css">
+		<link rel="stylesheet" href="./stylesheets/gameObjects.css">
 	</head>
 	<body>
 		<p id="demoTitle">Tank demo v1.1.alpha</p>
