--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="./scripts/debug_script.js" defer></script>
 		<script src="./scripts/keyboardController.js" defer></script>
 		<script src="./scripts/controllable_tank.js" defer></script>
+		<script src="./scripts/driving_handles.js" defer></script>
 		<link rel="stylesheet" href="./stylesheets/styles.css">
 		<link rel="stylesheet" href="./stylesheets/gameObjects.css">
 	</head>
@@ -29,7 +30,7 @@
 				<img class="keyIcon" src="./assets/keys/keyD.png">
 			</div>
 		</div>
-		<img id="leftHandle" src="./assets/driving_handles/handle_left_normal.png">
-		<img id="rightHandle" src="./assets/driving_handles/handle_right_normal.png">
+		<img id="leftHandle" src="./assets/driving_handles/handle_left_neutral.png">
+		<img id="rightHandle" src="./assets/driving_handles/handle_right_neutral.png">
 	</body>
 </html>
