--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="./scripts/keyboard_controller.js" defer></script>
 		<script src="./scripts/controllable_tank.js" defer></script>
 		<script src="./scripts/driving_handles.js" defer></script>
+		<script src="./scripts/debug_script.js" defer></script>
 		<link rel="stylesheet" href="./stylesheets/global.css">
 		<link rel="stylesheet" href="./stylesheets/standardUi.css">
 		<link rel="stylesheet" href="./stylesheets/uiElements.css">
@@ -13,7 +14,35 @@
 	</head>
 	<body>
 		<div id="UiLayer"><!--Container for UI elements-->
-			<div class="uiBox anchorBottomRight"> <!--Instructions container-->
+			<div id="projectTitle" class="uiBox anchorTopLeft"> <!--Project title container-->
+				<div class="uiTextContainer">
+					<p class="uiText">Tank demo v1.1.alpha</p>
+				</div>
+			</div>
+			<div id="debugBox" class="uiBox anchorTopRight"> <!--Debug info container-->
+				<div class="uiTextContainer">
+					<p class="uiText">Debug information:</p>
+				</div>
+				<div class="uiTextContainer">
+					<p class="uiText uiTextSmall">position: [0,0]</p>
+				</div>
+				<div class="uiTextContainer">
+					<p class="uiText uiTextSmall">rotation: 0</p>
+				</div>
+				<div class="uiTextContainer">
+					<p class="uiText uiTextSmall">leftTrack: 0</p>
+				</div>
+				<div class="uiTextContainer">
+					<p class="uiText uiTextSmall">rightTrack: 0</p>
+				</div>
+				<div class="uiTextContainer">
+					<p class="uiText uiTextSmall">speed: 0</p>
+				</div>
+				<div class="uiTextContainer">
+					<p class="uiText uiTextSmall">acceleration: 0</p>
+				</div>
+			</div>
+			<div id="instructionsBox" class="uiBox anchorBottomRight"> <!--Instructions container-->
 				<div class="uiTextContainer"> 
 					<p class="uiText instructionsText">Left track forwards</p>
 					<p class="uiKeyIcon">q</p>
@@ -30,9 +59,12 @@
 					<p class="uiText instructionsText">Right track reverse</p>
 					<p class="uiKeyIcon">d</p>
 				</div>
+				<div class="uiTextContainer"> 
+					<p class="uiText instructionsText">Open/close debug box</p>
+					<p class="uiKeyIcon">]</p>
+				</div>
 			</div>
 		</div>
-		<p id="demoTitle">Tank demo v1.1.alpha</p>
 		<img id="leftHandle" src="./assets/driving_handles/handle_left_neutral.png">
 		<img id="rightHandle" src="./assets/driving_handles/handle_right_neutral.png">
 	</body>
