Refaktoryzacja kodu - Część 9

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				</div>
 			</div>
 		</div>
+		<img id="six_meters" src="./assets/6_meters.png">
 		<img id="leftHandle" src="./assets/driving_handles/handle_left_neutral.png">
 		<img id="rightHandle" src="./assets/driving_handles/handle_right_neutral.png">
 	</body>
