--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 			</div>
 		</div>
 		<img id="six_meters" src="./assets/6_meters.png">
-		<img id="leftHandle" src="./assets/driving_handles/handle_left_neutral.png">
-		<img id="rightHandle" src="./assets/driving_handles/handle_right_neutral.png">
+		<img id="soldier" src="./assets/soldier.png">
+		<img id="leftHandle" src="./assets/steering/handle_left_neutral.png">
+		<img id="rightHandle" src="./assets/steering/handle_right_neutral.png">
 	</body>
 </html>
