--- a/main_menu.html
+++ b/main_menu.html
@@ -1,13 +1,19 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title> FT - WW1 Tank game</title>
+		<title>FT - WW1 Tank game</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="">
+		<link rel="icon" href="./assets/favicon.png">
+		<link rel="stylesheet" href="./stylesheets/global.css">
+		<link rel="stylesheet" href="./stylesheets/main_menu.css">
+		<script src="./scripts/cursor_effects.js" defer></script>
 	</head>
 	<body>
-		<div id="main_buttons">
-
+		<div id="menu_wrapper">
+			<img id="game_logo" src="./assets/game_logo.png">
+			<button id="play_demo_button" class="button"></button>
+			<button id="settings_button" class="button"></button>
+			<button id="about_button" class="button"></button>
 		</div>
 	</body>
 </html>
