--- a/index.html
+++ b/index.html
@@ -1,51 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Gra o czołgach</title>
+		<title>FT - WW1 Tank game</title>
 		<meta charset="UTF-8">
-		<script src="./scripts/uiFunctions.js" defer></script>
-		<script src="./scripts/keyboard_controller.js" defer></script>
-		<script src="./scripts/controllable_tank.js" defer></script>
-		<script src="./scripts/driving_handles.js" defer></script>
-		<script src="./scripts/debug_box.js" defer></script>
+		<link rel="icon" href="./assets/misc/favicon.png">
 		<link rel="stylesheet" href="./stylesheets/global.css">
-		<link rel="stylesheet" href="./stylesheets/standardUi.css">
-		<link rel="stylesheet" href="./stylesheets/uiElements.css">
-		<link rel="stylesheet" href="./stylesheets/gameObjects.css">
+		<script src="./scripts/renderingEngine/renderObjectClass.js"></script>
+		<script src="./scripts/renderingEngine/renderLayerClass.js"></script>
+		<script src="./scripts/renderingEngine/game_renderer.js" defer></script>
+		<script src="./scripts/scenes/main_menu.js" defer></script>
 	</head>
 	<body>
-		<div id="uiLayer"><!--Container for UI elements-->
-			<div id="projectTitle" class="uiBox anchorTopLeft"> <!--Project title container-->
-				<div class="uiTextContainer">
-					<p class="uiText">Tank demo v1.1.alpha</p>
-				</div>
-			</div>
-			<div id="instructionsBox" class="uiBox anchorBottomRight"> <!--Instructions container-->
-				<div class="uiTextContainer"> 
-					<p class="uiText instructionsText">Left track forwards</p>
-					<p class="uiKeyIcon">q</p>
-				</div>
-				<div class="uiTextContainer"> 
-					<p class="uiText instructionsText">Left track reverse</p>
-					<p class="uiKeyIcon">a</p>
-				</div>
-				<div class="uiTextContainer"> 
-					<p class="uiText instructionsText">Right track forwards</p>
-					<p class="uiKeyIcon">e</p>
-				</div>
-				<div class="uiTextContainer"> 
-					<p class="uiText instructionsText">Right track reverse</p>
-					<p class="uiKeyIcon">d</p>
-				</div>
-				<div class="uiTextContainer"> 
-					<p class="uiText instructionsText">Open/close debug box</p>
-					<p class="uiKeyIcon">]</p>
-				</div>
-			</div>
-		</div>
-		<img id="six_meters" src="./assets/6_meters.png">
-		<img id="soldier" src="./assets/soldier.png">
-		<img id="leftHandle" src="./assets/steering/handle_left_neutral.png">
-		<img id="rightHandle" src="./assets/steering/handle_right_neutral.png">
+		<canvas id="gameWindow"></canvas>
 	</body>
 </html>
