--- a/FT.html
+++ b/FT.html
@@ -10,11 +10,17 @@
 		<script src="./scripts/renderingEngine/9_slice_lib.js"></script>
 		<script src="./scripts/renderingEngine/animationEngine/animation_class.js"></script>
 		<script src="./scripts/mouseHandling/cursor_in_rect_lib.js"></script>
+		<script src="./scripts/gameEngine/game_object_class.js"></script>
+		<script src="./scripts/gameEngine/game_engine.js" defer></script>
 		<script src="./scripts/renderingEngine/game_renderer.js" defer></script>
+		<script src="./scripts/gameEngine/keyboard_controller.js" defer></script>
 		<script src="./scripts/mouseHandling/hover_event_handler.js" defer></script>
 		<script src="./scripts/mouseHandling/click_event_handler.js" defer></script>
+		<script src="./scripts/mouseHandling/scroll_event_handler.js" defer></script>
 		<script src="./scripts/scenes/intro_cutscene.js" defer></script>
 		<script src="./scripts/scenes/mainMenu/scene.js" defer></script>
+		<script src="./scripts/scenes/tutorialSequence/tutorialIntro/scene.js" defer></script>
+		<script src="./scripts/scenes/tutorialSequence/part1/scene.js" defer></script>
 	</head>
 	<body>
 		<canvas id="gameWindow"></canvas>
