Demo gry skończone

--- a/FT.html
+++ b/FT.html
@@ -9,9 +9,14 @@
 		<script src="./scripts/renderingEngine/renderLayerClass.js"></script>
 		<script src="./scripts/renderingEngine/9_slice_lib.js"></script>
 		<script src="./scripts/renderingEngine/animationEngine/animation_class.js"></script>
+		<script src="./scripts/renderingEngine/animationEngine/animation_keyframe_class.js"></script>
 		<script src="./scripts/mouseHandling/cursor_in_rect_lib.js"></script>
 		<script src="./scripts/gameEngine/game_object_class.js"></script>
+		<script src="./scripts/gameEngine/control_scheme_lib.js"></script>
+		<script src="./scripts/gameEngine/objectiveHandler/objective_lib.js"></script>
+		<script src="./scripts/gameEngine/dialogueHandler/dialogue_handler.js"></script>
 		<script src="./scripts/gameEngine/game_engine.js" defer></script>
+		<script src="./scripts/gameEngine/objectiveHandler/objective_handler.js" defer></script>
 		<script src="./scripts/renderingEngine/game_renderer.js" defer></script>
 		<script src="./scripts/gameEngine/keyboard_controller.js" defer></script>
 		<script src="./scripts/mouseHandling/hover_event_handler.js" defer></script>
