Dodanie plików projektowych

--- a/FT.html
+++ b/FT.html
@@ -26,6 +26,11 @@
 		<script src="./scripts/scenes/mainMenu/scene.js" defer></script>
 		<script src="./scripts/scenes/tutorialSequence/tutorialIntro/scene.js" defer></script>
 		<script src="./scripts/scenes/tutorialSequence/part1/scene.js" defer></script>
+		<script src="./scripts/scenes/mainGameIntro/scene.js" defer></script>
+		<script src="./scripts/scenes/mainGame/scene.js" defer></script>
+		<script src="./scripts/scenes/failScreen/scene.js" defer></script>
+		<script src="./scripts/scenes/winScreen/scene.js" defer></script>
+		<script src="./scripts/game_starter.js" defer></script>
 	</head>
 	<body>
 		<canvas id="gameWindow"></canvas>
